connect server and web

--- a/web/app.html
+++ b/web/app.html
@@ -1,65 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Banglore Home Price Prediction</title>
+    <title>Ho Chi Minh' Real Estate Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="app.js"></script>
 	<link rel="stylesheet" href="app.css">
 </head>
 <body>
 <div class="img"></div>
 <form class="form">
-	<h1>DỰ ĐOÁN GIÁ BẤT ĐỘNG SẢN</h1>
+	<h1>DỰ ĐOÁN GIÁ BẤT ĐỘNG SẢN ĐỐI VỚI LOẠI HÌNH CĂN HỘ Ở PHẠM VI THÀNH PHỐ HỒ CHÍ MINH</h1>
+
 	<h2>Diện tích (m2)</h2>
-    <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
+    <input id="area" class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="0">
+
+	<h2>Diện tích sử dụng(m2)</h2>
+    <input id="used_area" class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="0">
+
 	<h2>Số phòng ngủ</h2>
-	<div class="switch-field">
-		<input type="radio" id="radio-bhk-1" name="uiBHK" value="1"/>
-		<label for="radio-bhk-1">1</label>
-		<input type="radio" id="radio-bhk-2" name="uiBHK" value="2" checked/>
-		<label for="radio-bhk-2">2</label>
-		<input type="radio" id="radio-bhk-3" name="uiBHK" value="3"/>
-		<label for="radio-bhk-3">3</label>
-		<input type="radio" id="radio-bhk-4" name="uiBHK" value="4"/>
-		<label for="radio-bhk-4">4</label>
-		<input type="radio" id="radio-bhk-5" name="uiBHK" value="5"/>
-		<label for="radio-bhk-5">5</label>
-	</div>
+    <input id="bedrooms" class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="0">
+	
 	<h2>Số phòng tắm</h2>
-	<div class="switch-field">
-		<input type="radio" id="radio-bath-1" name="uiBathrooms" value="1"/>
-		<label for="radio-bath-1">1</label>
-		<input type="radio" id="radio-bath-2" name="uiBathrooms" value="2" checked/>
-		<label for="radio-bath-2">2</label>
-		<input type="radio" id="radio-bath-3" name="uiBathrooms" value="3"/>
-		<label for="radio-bath-3">3</label>
-		<input type="radio" id="radio-bath-4" name="uiBathrooms" value="4"/>
-		<label for="radio-bath-4">4</label>
-		<input type="radio" id="radio-bath-5" name="uiBathrooms" value="5"/>
-		<label for="radio-bath-5">5</label>
-	</div>
+    <input id="bathrooms" class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="0">
+
 	<h2>Tình trạng nội thất</h2>
-	<div>
-		<select class="location" name="" id="uiLocations">
-			<option value="" disabled="disabled" selected="selected">Chọn tình trạng</option>
-				<option>Không có nội thất</option>
-				<option>Nội thất cơ bản</option>
-				<option>Nội thất đầy đủ</option>
-		</select>
-	</div>
+	<select class="location" name="" id="furniture_status" forHtml="furniture_status">
+		<option value="" disabled="disabled" selected="selected">Chọn tình trạng</option>
+			<option value="0" selected>Không có nội thất</option>
+			<option value="1">Nội thất cơ bản</option>
+			<option value="2">Nội thất đầy đủ</option>
+	</select>
+	
+	<h2>Ban công</h2>
+	<select class="location" name="" id="balcony" forHtml="balcony">
+		<option value="" disabled="disabled" selected="selected">Chọn tình trạng</option>
+			<option value="1">Có</option>
+			<option value="0" selected>Không</option>
+	</select>
+
+	<h2>Ga ra</h2>
+	<select class="location" name="" id="garage" forHtml="garage">
+		<option value="" disabled="disabled" selected="selected">Chọn tình trạng</option>
+			<option value="1">Có</option>
+			<option value="0" selected>Không</option>
+	</select>
+
+	<h2>Hồ bơi riêng</h2>
+	<select class="location" name="" id="private_pool" forHtml="private_pool">
+		<option value="" disabled="disabled" selected="selected">Chọn tình trạng</option>
+			<option value="1">Có</option>
+			<option value="0" selected>Không</option>
+	</select>
+
+	<h2>Loại chủ quyền</h2>
+	<select class="location" name="" id="sovereignty_type" forHtml="sovereignty type">
+		<option value="" disabled="disabled" selected="selected">Chọn loại chủ quyền</option>
+			<option selected>Giấy tay</option>
+			<option value="HĐ mua bán">Hoạt động mua bán</option>
+			<option>Sổ hồng</option>
+			<option>Sổ đỏ</option>
+	</select>
+
 	<h2>Quận</h2>
-	<div>
-		<select class="location" name="" id="uiLocations">
-			<option value="" disabled="disabled" selected="selected">Chọn quận</option>
-				<option>Quận 1</option>
-				<option>Quận 2</option>
-				<option>Quận 3</option>
-				<option>Quận 4</option>
-				<option>Quận 5</option>
-				<option>Quận 6</option>
-		</select>
-	</div>
-	<button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
-	<div id="uiEstimatedPrice" class="result">	<h2></h2> </div>
+	<select class="location" name="" id="district" forHtml="district">
+		<option value="" disabled="disabled" selected="selected">Chọn quận</option>
+		<!-- <option>Quận 1</option>
+		<option>Quận 2</option>
+		<option>Quận 3</option>
+		<option>Quận 4</option>
+		<option>Quận 5</option>
+		<option>Quận 6</option> -->
+	</select>
+	<button class="submit" type="submit">Estimate Price</button>
+	<div id="estimated_price" class="result">	<h2></h2> </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="app.js"></script>
 </html>
