--- a/web/app.html
+++ b/web/app.html
@@ -58,6 +58,7 @@
 			<option value="HĐ mua bán">Hoạt động mua bán</option>
 			<option>Sổ hồng</option>
 			<option>Sổ đỏ</option>
+			<option>Khác</option>
 	</select>
 
 	<h2>Quận</h2>
@@ -70,8 +71,8 @@
 		<option>Quận 5</option>
 		<option>Quận 6</option> -->
 	</select>
-	<button class="submit" type="submit">Estimate Price</button>
-	<div id="estimated_price" class="result">	<h2></h2> </div>
+	<div><button class="submit" type="submit">Estimate Price</button></div>
+	<div id="estimated_price" class="result"><h2></h2></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="app.js"></script>
